--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -71,7 +71,7 @@
                             </li>
                             <li class="card">
                                 <a href="imagem.html">
-                                    <img class="card__imagem" src="/assets/imagens/galeria/carina-nebula.png" alt="foto">
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
@@ -79,14 +79,14 @@
                                     <div class="card__texto">
                                         <p class="card__descricao">Fonte/fotógrafo/satélite</p>
                                         <span>
-                                            <img src="/assets/ícones/1x/favorite_outline.png" alt="ícone de coração">
+                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                                         </span>
                                     </div>
                                 </div>
                             </li>
                             <li class="card">
                                 <a href="imagem.html">
-                                    <img class="card__imagem" src="/assets/imagens/galeria/carina-nebula.png" alt="foto">
+                                    <img class="card__imagem" src="{% static  '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
@@ -94,14 +94,14 @@
                                     <div class="card__texto">
                                         <p class="card__descricao">Fonte/fotógrafo/satélite</p>
                                         <span>
-                                            <img src="/assets/ícones/1x/favorite_outline.png" alt="ícone de coração">
+                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                                         </span>
                                     </div>
                                 </div>
                             </li>
                             <li class="card">
                                 <a href="imagem.html">
-                                    <img class="card__imagem" src="/assets/imagens/galeria/carina-nebula.png" alt="foto">
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
@@ -109,14 +109,14 @@
                                     <div class="card__texto">
                                         <p class="card__descricao">Fonte/fotógrafo/satélite</p>
                                         <span>
-                                            <img src="/assets/ícones/1x/favorite_outline.png" alt="ícone de coração">
+                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png'%}" alt="ícone de coração">
                                         </span>
                                     </div>
                                 </div>
                             </li>
                             <li class="card">
                                 <a href="imagem.html">
-                                    <img class="card__imagem" src="/assets/imagens/galeria/carina-nebula.png" alt="foto">
+                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Estrelas</span>
                                 <div class="card__info">
@@ -124,7 +124,7 @@
                                     <div class="card__texto">
                                         <p class="card__descricao">Fonte/fotógrafo/satélite</p>
                                         <span>
-                                            <img src="/assets/ícones/1x/favorite_outline.png" alt="ícone de coração">
+                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                                         </span>
                                     </div>
                                 </div>
