--- a/templates/galeria/partials/_footer.html
+++ b/templates/galeria/partials/_footer.html
@@ -2,7 +2,7 @@
 <footer class="rodape">
     <div class="rodape__icones">
         <a href="#" target=”_blank” >
-            <img src="/assets/ícones/1x/twitter.png" alt="ícone twitter">
+            <img src="{% static '/assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
         </a>
         <a href="#" target=”_blank” >
           <img src="{% static '/assets/ícones/1x/instagram.png'%}" alt="ícone instagram">
