--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -20,23 +20,23 @@
             <div class="cabecalho__busca">
                 <div class="busca__fundo">
                     <input class="busca__input" type="text" placeholder="O que você procura?">
-                    <img class="busca__icone" src="/assets/ícones/1x/search.png" alt="ícone de search">
+                    <img class="busca__icone" src="{% static '/assets/ícones/1x/search.png' %}" alt="ícone de search">
                 </div>
             </div>
         </header>
         <main class="principal">
             <section class="menu-lateral">
                 <nav class="menu-lateral__navegacao">
-                    <a href="{% url 'index' %}"><img src="/assets/ícones/1x/Home - ativo.png"> Home</a>
-                    <a href="#"><img src="/assets/ícones/1x/Mais vistas - inativo.png"> Mais vistas</a>
-                    <a href="#"><img src="/assets/ícones/1x/Novas - inativo.png"> Novas</a>
-                    <a href="#"><img src="/assets/ícones/1x/Surpreenda-me - inativo.png"> Surpreenda-me</a>
+                    <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home - ativo.png'%}"> Home</a>
+                    <a href="#"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png'%}"> Mais vistas</a>
+                    <a href="#"><img src="{% static '/assets/ícones/1x/Novas - inativo.png'%}"> Novas</a>
+                    <a href="#"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png'%}"> Surpreenda-me</a>
                 </nav>
             </section>
             <section class="conteudo">
                 <section class="imagem">
                     <div class="imagem__conteudo">
-                        <img class="imagem__imagem" src="/assets/imagens/galeria/carina-nebula.png">
+                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png'%}">
                         <div class="imagem__info">
                             <div class="imagem__texto">
                                 <p class="imagem__titulo">“Penhascos Cósmicos” na Nebulosa Carina</p>
@@ -52,10 +52,10 @@
     <footer class="rodape">
         <div class="rodape__icones">
             <a href="https://twitter.com/planet" target=”_blank” >
-                <img src="/assets/ícones/1x/twitter.png" alt="ícone twitter">
+                <img src="{% static '/assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
             </a>
             <a href="https://www.instagram.com/planet/" target=”_blank” >
-                <img src="/assets/ícones/1x/instagram.png" alt="ícone instagram">
+                <img src="{% static '/assets/ícones/1x/instagram.png' %}" alt="ícone instagram">
             </a>
         </div>
         <p class="rodape__texto">Desenvolvido por Planet</p>
