--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -4,7 +4,7 @@
 
     <div class="pagina-inicial">
         <header class="cabecalho">
-            <img src="{% static '/assets/logo/castelo.png' %}" alt="Logo da Planet" />
+            <img src="{% static '/assets/logo/p.png' %}" alt="Logo da Planet" />
             <div class="cabecalho__busca">
                 <div class="busca__fundo">
                     <input class="busca__input" type="text" placeholder="O que você procura?">
