--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -45,7 +45,7 @@
                         <ul class="cards__lista">
 
                             
-                           
+                           {% if cards %}
                             <!-- Comentario HTML-->
                             {% for fotografia in cards %}
                             <li class="card">
@@ -69,6 +69,11 @@
                                 </div>
                             </li>
                             {% endfor %}
+                            {% else %}
+                            <div class="imagem__texto">
+                                <p>Fotografias não encontradas</p>
+                            </div>
+                            {% endif %}
                         </ul>
                     </div>
                 </section>
@@ -77,3 +82,4 @@
     </div>
 
 {% endblock %}
+
