--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -8,7 +8,7 @@
             <div class="cabecalho__busca">
                 <div class="busca__fundo">
                     <form action="{% url 'buscar' %}">
-                        <input class="busca__input" type="text" placeholder="O que você procura?">
+                        <input class="busca__input" type="text" name="buscar" placeholder="O que você procura?">
                         <button type="submit">
                             <img class="busca__icone" src="{% static '/assets/ícones/1x/search.png'%}" alt="ícone de search">
                         </button>                      
